# log10

./: .gitignore  LICENSE  Makefile  README.md  cli_docs.md  env  envtest  example.py  feedback.md  logging.md  pyproject.toml  requirements.txt  setup.py  test.env
.github/: dependabot.yml
.github/workflows/: ci.yaml  examples.yaml  examples.yml  linter.yaml  release.yaml  release.yml  ruff.yml  test.yml
Log10.egg-info/: PKG-INFO  SOURCES.txt
examples/: README.md  chatcompletion.py  completion.py  get_url.py  langchain_multiple_tools.py  langchain_qa.py
examples/agents/: biochemist.py  camel.py  code_optimizer.py  coder.py  cybersecurity_expert.py  email_generator.py  scrape_summarizer.py  translator.py
examples/evals/: a.out  basic_eval.py  compile.py  fuzzy.py  fuzzy_data.csv  fuzzy_output.csv  match.py  match_data.csv  match_output.csv
examples/feedback/: create_feedback_task.py  simple_feedback.py  summary_feedback.py
examples/feedback/echo/: echo.py  noisy_echo_feedback.py
examples/logging/: anthropic_async_completion.py  anthropic_async_messages.py  anthropic_async_messages_stream.py  anthropic_async_messages_stream_handler.py  anthropic_async_tools_stream.py  anthropic_async_tools_stream_handler.py  anthropic_completion.py  anthropic_messages.py  anthropic_messages_image.py  anthropic_messages_not_given.py  anthropic_messages_stream.py  anthropic_tools.py  anthropic_tools_stream.py  async_multi_session_tags.py  chatcompletion.py  chatcompletion_async_vs_sync.py  chatcompletion_sync.py  completion.py  completion_ada.py  completion_simple.py  get_url.py  google_genai_gemini_chat.py  google_genai_gemini_chat_w_history.py  lamini_generate.py  langchain_babyagi.py  langchain_logger.py  langchain_model_logger.py  langchain_model_logger_url.py  langchain_multiple_tools.py  langchain_qa.py  langchain_simple_sequential.py  langchain_sqlagent.py  large_image_upload.py  litellm_async_stream_completion.py  litellm_completion_stream.py  litellm_image.py  litellm_image_async_stream.py  litellm_image_stream.py  llm_abstraction.py  llm_anthropic_chat_completion.py  (+37 more)
examples/prompt/: demo_prompt_analyzer.py
log10/: __main__.py  _httpx_utils.py  anthropic.py  bigquery.py  cli_utils.py  evals.py  langchain.py  litellm.py  llm.py  load.py  mosaicml.py  openai.py  prompt_analyzer.py  secrets.py  together.py  tools.py  utils.py
log10/agents/: camel.py  scrape_summarizer.py
log10/cli/: autofeedback.py  autoprompt.py  cli_commands.py  completions.py  feedback.py  feedback_task.py
log10/completions/: completions.py  model_comparison.py
log10/feedback/: _summary_feedback_utils.py  autofeedback.py  feedback.py  feedback_task.py
src/log10/: _httpx_utils.py  anthropic.py  bigquery.py  evals.py  langchain.py  litellm.py  llm.py  load.py  prompt_analyzer.py  utils.py
src/log10/cli/: autoprompt.py  cli_commands.py  completions.py
src/log10/completions/: __init__.py  completions.py
src/log10/feedback/: autofeedback.py  feedback_task.py
src/log10/pytest_log10_managed_evaluation/: README.md  plugin.py  utils.py
src/log10/schemas/: bigquery.json
src/pytest_log10_eval/: pyproject.toml
src/pytest_log10_eval/pytest_log10_eval/: _log10_utils.py  plugin.py
src/pytest_log10_managed_evaluation/: README.md  plugin.py  pyproject.toml
src/pytest_log10_managed_evaluation/pytest_log10_managed_evaluation/: plugin.py  serialize.py
tests/: conftest.py  log10_load_twice.py  pytest.ini  test_anthropic.py  test_camel_generator.py  test_chatcompletion.py  test_cli.py  test_completion.py  test_completions.py  test_context_managers.py  test_google.py  test_lamini.py  test_langchain.py  test_langchain_babyagi.py  test_langchain_simple_sequential.py  test_langchain_sqlagent.py  test_large_images.py  test_litellm.py  test_load.py  test_magentic.py  test_magentic_perplexity.py  test_mistralai.py  test_multiple_sessions.py  test_openai.py  test_openai_compatibility.py  test_openai_perplexity_compability.py  test_requests.py  utils.py
