[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytest_log10_managed_evaluation"
description = "pytest plugin for log10 managed evaluation"

version = "0.14.0rc1" # Match this with log10-io version
authors = ["log10 team"]
license = "MIT"
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

packages = [
    { include = "pytest_log10_managed_evaluation", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pytest = ">=6.2.0"
pytest-metadata = ">=1.0.0"

[project.urls]
"Homepage" = "https://github.com/log10-io/log10"
"Bug Tracker" = "https://github.com/log10-io/log10/issues"

[tool.poetry.plugins.pytest11]
log10_managed_evaluation = "pytest_log10_managed_evaluation.plugin"
